fix spacing around form controls

--- a/src/styles/objects/form.objects.scss
+++ b/src/styles/objects/form.objects.scss
@@ -8,3 +8,9 @@
 fieldset > .form-control {
   //margin: 5px 10px 5px 0;
 }
+
+.form-no_control_margins .form-control {
+  margin: 0;
+}
+
+
